cabal-version:      2.4
name:               workout-progress
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         quimpm99@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable workout-progress
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    other-modules: Types
                   Database 
                   Charts


    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.13.0.0
                      , sqlite-simple ^>=0.4.18.0
                      , easyplot
                      , old-locale
                      , time ^>=1.9.3
                      , text ^>=1.2.4.0
                      , unix-time ^>= 0.4.7
    hs-source-dirs:   app
    default-language: Haskell2010
